[gd_scene load_steps=12 format=3 uid="uid://ddjp64l1uocwt"]

[ext_resource type="Script" path="res://UserInterface/hud.gd" id="1_cu26s"]
[ext_resource type="FontFile" uid="uid://cr3k0sjtqygjt" path="res://UserInterface/Knewave-Regular.ttf" id="1_yiltx"]
[ext_resource type="LabelSettings" uid="uid://cbda8l5413cgc" path="res://UserInterface/blueberry_text.tres" id="2_lumol"]
[ext_resource type="StyleBox" uid="uid://ccpo42jgccyjc" path="res://UserInterface/grassStyleBox.tres" id="4_623k5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bht4d"]
bg_color = Color(0.521579, 0.498189, 0.399623, 0.784314)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.41, 0.328273, 0.1968, 1)
corner_radius_top_left = 85
corner_radius_top_right = 85
corner_radius_bottom_right = 85
corner_radius_bottom_left = 85

[sub_resource type="LabelSettings" id="LabelSettings_m460q"]
font = ExtResource("1_yiltx")
font_size = 108
font_color = Color(0.815744, 0.922393, 0.925778, 1)
shadow_size = 11
shadow_color = Color(0.24472, 0.171147, 0.317642, 0.705882)
shadow_offset = Vector2(2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yc22o"]
bg_color = Color(0.521579, 0.498189, 0.399623, 0.784314)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.41, 0.328273, 0.1968, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kpgpj"]
bg_color = Color(0.4544, 0.68018, 0.71, 0.521569)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.6, 0.5835, 0.402, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mc734"]
bg_color = Color(1, 1, 1, 0.392157)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.380432, 0.312485, 0.166073, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
anti_aliasing = false

[sub_resource type="ImageTexture" id="ImageTexture_q355s"]

[sub_resource type="LabelSettings" id="LabelSettings_6ag4n"]
font = ExtResource("1_yiltx")
font_size = 25
font_color = Color(0.815744, 0.922393, 0.925778, 1)
shadow_size = 5
shadow_color = Color(0.599518, 0.584909, 0.405721, 0.705882)
shadow_offset = Vector2(2, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_cu26s")

[node name="FlingCount" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="CounterPanel" type="Panel" parent="FlingCount"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -265.0
offset_top = 50.0
offset_right = -90.0
offset_bottom = 225.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_bht4d")

[node name="CounterLabel" type="Label" parent="FlingCount/CounterPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "5
"
label_settings = SubResource("LabelSettings_m460q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextPanel" type="Panel" parent="FlingCount"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -265.0
offset_top = 225.0
offset_right = -90.0
offset_bottom = 275.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_yc22o")

[node name="TextLabel" type="Label" parent="FlingCount/TextPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -20.0
offset_right = 66.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Flings Used"
label_settings = ExtResource("2_lumol")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HoleNum" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CounterPanel" type="Panel" parent="HoleNum"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 10.0
offset_top = 50.0
offset_right = 185.0
offset_bottom = 225.0
grow_horizontal = 0
theme_override_styles/panel = ExtResource("4_623k5")

[node name="CounterLabel" type="Label" parent="HoleNum/CounterPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -84.5
offset_right = 32.5
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2
text = "5
"
label_settings = SubResource("LabelSettings_m460q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextPanel" type="Panel" parent="HoleNum"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 10.0
offset_top = 225.0
offset_right = 185.0
offset_bottom = 275.0
grow_horizontal = 0
theme_override_styles/panel = ExtResource("4_623k5")

[node name="TextLabel" type="Label" parent="HoleNum/TextPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -20.0
offset_right = 66.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Hole Number
"
label_settings = ExtResource("2_lumol")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -295.0
offset_top = 50.0
offset_right = 295.0
offset_bottom = 175.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kpgpj")

[node name="ToppSlot1" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -50.0
offset_right = 115.0
offset_bottom = 50.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mc734")

[node name="TextureRect" type="TextureRect" parent="Panel/ToppSlot1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ToppSlot2" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 130.0
offset_top = -50.0
offset_right = 230.0
offset_bottom = 50.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mc734")

[node name="TextureRect" type="TextureRect" parent="Panel/ToppSlot2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="ToppSlot3" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 245.0
offset_top = -50.0
offset_right = 345.0
offset_bottom = 50.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mc734")

[node name="TextureRect" type="TextureRect" parent="Panel/ToppSlot3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="ToppSlot4" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 360.0
offset_top = -50.0
offset_right = 460.0
offset_bottom = 50.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mc734")

[node name="TextureRect" type="TextureRect" parent="Panel/ToppSlot4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ImageTexture_q355s")

[node name="ToppSlot5" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 475.0
offset_top = -50.0
offset_right = 575.0
offset_bottom = 50.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mc734")

[node name="TextureRect" type="TextureRect" parent="Panel/ToppSlot5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="ObjectivePanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 200.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("4_623k5")

[node name="Label" type="Label" parent="ObjectivePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Objectives Complete Got to Exit"
label_settings = SubResource("LabelSettings_6ag4n")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
clip_contents = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -290.0
offset_top = -410.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(240, 360)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 50, 0)
projection = 1
size = 62.0
